hphp/test/slow/shapes/idx_arr_null_still_checks_arraykey.php.expectf
Catchable fatal error: Argument 2 passed to HH\Shapes::idx() must be an instance of arraykey, null given in %s/test/slow/shapes/idx_arr_null_still_checks_arraykey.php on line 5
